# hdx-scraper-chc_ucsb

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/chc_ucsb/: __main__.py  boundaries.py  pipeline.py  tiff_download.py  zonalstats.py
src/hdx/scraper/chc_ucsb/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py  test_tiff_download.py
